--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "colors": "^1.4.0",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.1",
     "socket.io": "^4.8.1"
   }
 }
